[package]
name = "liberfi-pm"
version = "0.1.0"
description = "Liberfi long-tail prediction market — N-outcome vAMM + xLP vault (Solana/Anchor, Phase 1)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liberfi_pm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-security-txt = "1.1.1"
